--- a/lm_eval/tasks/robench/robench-2024b.yaml
+++ b/lm_eval/tasks/robench/robench-2024b.yaml
@@ -5,7 +5,7 @@ output_type: multiple_choice
 training_split: null 
 validation_split: null
 test_split: train
-doc_to_text: "{{support.lstrip()}}\nQuestion: Which one is the next sequence for the following given context:\n```\n{{question}}```\nAnswer:"
+doc_to_text: "Question: Which one is the next sequence for the following given context:\n```\n{{context}}```\nAnswer:"
 # doc_to_text: "## Instruction:\n Given a context, and four choice marked as A, B, C, and D, your need to select the correct text which is the next sequence of the context provided. You shouldn't provide any other information (like explanations of your choice) or re-say the choice in your Answer. Just four letters, A, B, C, or D.\n## Context:\n{{context}}\n## Choice:\n**A** {}Answer:"
 doc_to_target: 3
 doc_to_choice: "{{[distractor1, distractor2, distractor3, correct_answer]}}"
